--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
 
 <table border="1">
 <tr>
-	<td>Boleta:</td><td><input type="text" name="boletaobtenido" id="boletaobtenido" ></td>
+	<td bgcolor="gree">Boleta:</td><td><input type="text" name="boletaobtenido" id="boletaobtenido" ></td>
 </tr>	
    <tr>
-	<td>Nombre:</td><td><input type="text" name="nombreobtenido" id="nombreobtenido" ></td>
+	<td bgcolor="gree">Nombre:</td><td><input type="text" name="nombreobtenido" id="nombreobtenido" ></td>
 </tr>	  
   <tr>
-	<td>Grupo:</td><td><input type="text" name="grupoobtenido" id="grupoobtenido" ></td>
+	<td bgcolor="gree">Grupo:</td><td><input type="text" name="grupoobtenido" id="grupoobtenido" ></td>
 </tr>	
   <tr>
-	<td>Materia:</td><td><input type="text" name="materiaobtenido" id="materiaobtenido" ></td>
+	<td bgcolor="gree">Materia:</td><td><input type="text" name="materiaobtenido" id="materiaobtenido" ></td>
 </tr>	
   
   <tr>
-	<td>Fecha:</td><td><input type="text" name="fechaobtenido" id="fechaobtenido" ></td>
+	<td bgcolor="gree">Fecha:</td><td><input type="text" name="fechaobtenido" id="fechaobtenido" ></td>
 </tr>	
   
 </table>
