--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <title>DATOS ALUMNO</title>
   
   <h1>INTRODUCE LOS SIUIENTES DATOS</h1>
-
 <script type="text/javascript">
 	function obtenerdatos()
 	{
@@ -22,10 +21,7 @@
 
 	}
 </script>
-	
-	
-	
-	</head>
+</head>
 <body>
 <form name="registro">
 <table border="1">
@@ -56,27 +52,30 @@
   
 <h1>TUSDATOS SON:</h1>
 
-<table border="1">
-<tr>
-	<td bgcolor="gree">Boleta:</td><td><input type="text" name="boletaobtenido" id="boletaobtenido" ></td>
-</tr>	
+
+
+	<td    bgcolor="gree">Boleta:</td><td><input type="text" name="boletaobtenido" id="boletaobtenido" ></td>
+
    <tr>
-	<td bgcolor="gree">Nombre:</td><td><input type="text" name="nombreobtenido" id="nombreobtenido" ></td>
+	<td>Nombre:</td><td><input type="text" name="nombreobtenido" id="nombreobtenido" ></td>
 </tr>	  
   <tr>
-	<td bgcolor="gree">Grupo:</td><td><input type="text" name="grupoobtenido" id="grupoobtenido" ></td>
+	<td>Grupo:</td><td><input type="text" name="grupoobtenido" id="grupoobtenido" ></td>
 </tr>	
   <tr>
-	<td bgcolor="gree">Materia:</td><td><input type="text" name="materiaobtenido" id="materiaobtenido" ></td>
+	<td>Materia:</td><td><input type="text" name="materiaobtenido" id="materiaobtenido" ></td>
 </tr>	
   
   <tr>
-	<td bgcolor="gree">Fecha:</td><td><input type="text" name="fechaobtenido" id="fechaobtenido" ></td>
+	<td>Fecha:</td><td><input type="text" name="fechaobtenido" id="fechaobtenido" ></td>
 </tr>	
   
 </table>
 </form>
 </center>
-
 </body>
+
+
 </html>
+
+
